Opened 13 years ago

Closed 13 years ago

#8329 closed bug (fixed)

Regression: Mode setting issues on hardware with Kaleidoscope encoders

Reported by: kallisti5 Owned by: kallisti5
Priority: critical Milestone: R1/alpha4
Component: Drivers/Graphics/radeon_hd Version: R1/Development
Keywords: lvds Cc:
Blocked By: Blocking: #8059, #8154, #8310, #8331
Platform: All

Description (last modified by kallisti5)

It seems hardware with Kaleidoscope encoders are consistently seeing mode setting issues.

Issue Map: https://docs.google.com/spreadsheet/ccc?key=0Arnu-hcq_YP7dFBPcHppeTQ2b0hXeG81c1dYb2RLNVE

Several users have noted that this used to work for their hardware.

Change History (20)

comment:1 by kallisti5, 13 years ago

Blocking: 8310 added

comment:2 by kallisti5, 13 years ago

Blocking: 8154 added

(In #8154) Potentially due to #8329

comment:3 by kallisti5, 13 years ago

Blocking: 8059 added

(In #8059) #8329 opened for more general issue with EDID lvds

comment:4 by kallisti5, 13 years ago

Blocking: 8289 added

comment:5 by kallisti5, 13 years ago

It should be noted that the special display port LVDS bridge in newer 6xxx hardware is working. We're actually doing pretty good as this issue the easier of the two methods to implement.

Last edited 13 years ago by kallisti5 (previous) (diff)

comment:6 by kallisti5, 13 years ago

Blocking: 8331 added

(In #8331) Probably also related to #8329

comment:7 by kallisti5, 13 years ago

Description: modified (diff)

comment:8 by kallisti5, 13 years ago

Milestone: R1R1/beta1
Priority: highblocker

comment:9 by kallisti5, 13 years ago

hrev43747 got things a little closer... we need to figure out a way to pass this data back to the app server (via EDID or something else)

comment:10 by mmadia, 13 years ago

Milestone: R1/beta1R1/alpha4

comment:11 by kallisti5, 13 years ago

I have ongoing work to do this on my laptop, still a little buggy though.

Fix:

  • Add calls to store a "preferredMode" for each screen.
  • If LVDS is found, set preferredMode
  • app_server then looks for a preferred Mode for the screen before using EDID
  • Thanks for the idea Axel.

I hope to have something upstream soon to address this (hopefully before A4! :D )

comment:12 by kallisti5, 13 years ago

Attention #8059, #8154, #8289, #8310, #8331

hrev43767 should resolve this issue so the native resolution should be set properly.

Can you test as soon as you have access to a hrev43767 or higher build?

comment:13 by kallisti5, 13 years ago

Status: newassigned

comment:14 by kallisti5, 13 years ago

hrev43767 is reported to not fix the issue. It looks as though while we pass the proper video mode as the "preferred mode", the lack of the mode in the displays VESA edid data is preventing it from being selected.

The solution I think is adding the preferred mode to the list of available video modes (even if the preferred mode ends up being the only available resolution for a lvds display)

comment:15 by kallisti5, 13 years ago

Actually, nix the last comment.. I just verified the lvds mode returned *is* within the vesa edid data.

I do see this issue: "KERN: radeon_hd: pll_adjust: external DP bridge detected!"

I don't think these cards have DP bridges. The PLL code is formed like the linux drm driver, however I think it looks wrong. Let me play with something and I'll get back with a potential solution :)

comment:16 by kallisti5, 13 years ago

try post hrev43810. hrev43810 fixes a *big* oops.

comment:17 by kallisti5, 13 years ago

Description: modified (diff)
Priority: blockercritical
Summary: Laptops using lvds can't set video modes due to lack of special lvds edid read function.Mode setting issues on hardware with Kaleidoscope encoders

Changing from lvds issue to more general encoder issue.

Tracking issue here: https://docs.google.com/spreadsheet/ccc?key=0Arnu-hcq_YP7dFBPcHppeTQ2b0hXeG81c1dYb2RLNVE

This seems more like a general issue with mode setting on cards with Kaleidoscope encoders after correlating the issues.

I am standing up a test machine with Kaleidoscope encoders to try and reproduce the issue.

comment:18 by kallisti5, 13 years ago

Description: modified (diff)
Summary: Mode setting issues on hardware with Kaleidoscope encodersRegression: Mode setting issues on hardware with Kaleidoscope encoders

comment:19 by kallisti5, 13 years ago

Blocking: 8289 removed

comment:20 by kallisti5, 13 years ago

Resolution: fixed
Status: assignedclosed

hrev43900 should solve this issue.

Note: See TracTickets for help on using tickets.